@@ -2,6 +2,9 @@
 HISTORY
 =======
 
+- Don't fail if kupu_library_tool is not available
+  [naro]
+
 1.1rc9 (2010-02-18)
 -------------------
 
